--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,37 @@
 {
 	"manifest_version": 2,
 	"name": "MyFitnessPal Chart Overhaul",
-	"version": "0.3",
+	"version": "0.4",
 	"content_scripts": [{
 		"matches": [
-			"http://www.myfitnesspal.com/*reports"
+		  "www.myfitnesspal.com.br/reports",
+		  "www.myfitnesspal.com/*reports",
+		  "www.myfitnesspal.cn/reports",
+		  "www.myfitnesspal.de/reports",
+		  "www.myfitnesspal.es/reports",
+		  "www.myfitnesspal.fr/reports",
+		  "www.myfitnesspal.com.hk/reports",
+		  "www.myfitnesspal.it/reports",
+		  "www.myfitnesspal.jp/reports",
+		  "www.myfitnesspal.co.kr/reports",
+		  "www.myfitnesspal.com.mx/reports",
+		  "www.myfitnesspal.nl/reports",
+		  "www.myfitnesspal.se/reports",
+		  "www.myfitnesspal.com.tw/reports",
+		  "www.myfitnesspal.com/de/reports",
+		  "www.myfitnesspal.com/es/reports",
+		  "www.myfitnesspal.com/fr/reports",
+		  "www.myfitnesspal.com/pt/reports",
+		  "www.myfitnesspal.com/it/reports",
+		  "www.myfitnesspal.com/nb/reports",
+		  "www.myfitnesspal.com/nl/reports",
+		  "www.myfitnesspal.com/ru/reports",
+		  "www.myfitnesspal.com/sv/reports",
+		  "www.myfitnesspal.com/da/reports",
+		  "www.myfitnesspal.com/ko/reports",
+		  "www.myfitnesspal.com/ja/reports",
+		  "www.myfitnesspal.com/zh-CN/reports",
+		  "www.myfitnesspal.com/zh-TW/reports"
 		],
 	"css" : [
 			"jquery-ui-1.11.4/jquery-ui.css",
@@ -18,7 +45,7 @@
 		"JQRangeSlider-5.7.1/jQDateRangeSlider-withRuler-min.js",
 		"highcharts.js",
 		"exporting.js",
-		"test.js"
+		"main.js"
 	]
 	}],
 	"web_accessible_resources" : [
